Correct spacing in the single handed score board.

--- a/src/app/concentration/components/scoreboard/scoreboard.component.scss
+++ b/src/app/concentration/components/scoreboard/scoreboard.component.scss
@@ -49,10 +49,14 @@
 
         li {
           display: block;
-          margin: 5px 0;
+          margin: 6px 0;
           background: #FFF;
           color: #000;
-          padding: 2px 0;
+          padding: 2px 0 1px;
+
+          &:first-child {
+            margin: 5px 0;
+          }
 
           span {
             display: inline;
